--- a/assets/css/template/_home.scss
+++ b/assets/css/template/_home.scss
@@ -202,27 +202,65 @@
       display: inline-block;
       width: 18%;
 
-      @include general-mobile {
+      @media (max-width: 575px) {
         .stat-icon {
           margin-bottom: 5px;
+          clear: both;
+
+          @media (min-width: 992px) {
+            clear: none;
+          }
         }
       }
 
       .stat-info {
         float: left;
-        font-size: 14px;
-        line-height: 15px;
+        font-size: 10px;
+        line-height: 10px;
         color: #000;
         text-align: left;
+        clear: both;
 
-        @include general-mobile {
-          font-size: 12px;
-          line-height: 12px;
+        @media (min-width: 768px) {
+          font-size: 14px;
+          line-height: 15px;
+        }
+
+        @media (min-width: 992px) {
+          clear: none;
         }
 
         .count-info {
-          font-size: 18px;
           font-weight: bold;
+          white-space: nowrap;
+
+          @media (max-width: 767px) {
+            font-size: 15px;
+          }
+
+          @media (min-width: 768px) {
+            font-size: 18px;
+          }
+
+          @media (max-width: 575px) {
+            &.wrap {
+              display: inline-block;
+            }
+
+            &.no-wrap {
+              display: none;
+            }
+          }
+
+          @media (min-width: 576px) {
+            &.wrap {
+              display: none;
+            }
+
+            &.no-wrap {
+              display: inline-block;
+            }
+          }
         }
       }
     }
