--- a/assets/css/template/_package-view.scss
+++ b/assets/css/template/_package-view.scss
@@ -124,6 +124,7 @@
           padding: 0 0 5px;
           font-size: 18px;
           font-weight: bold;
+          white-space: nowrap;
 
           @include general-mobile {
             font-size: 15px;
