--- a/lib/hexpm/web/templates/dashboard/password.html.eex
+++ b/lib/hexpm/web/templates/dashboard/password.html.eex
@@ -1,11 +1,11 @@
 <%= changeset_error(@changeset) %>
 
 <div class="row">
-  <div class="col-md-3">
+  <div class="col-sm-3">
     <%= render "_sidebar.html", assigns %>
   </div>
 
-  <div class="col-md-9">
+  <div class="col-sm-9">
     <div class="panel panel-default">
       <div class="panel-heading">Change password</div>
       <div class="panel-body">
