Update package view stats

--- a/lib/hexpm/web/templates/page/index.html.eex
+++ b/lib/hexpm/web/templates/page/index.html.eex
@@ -57,7 +57,7 @@
   </div>
 </div>
 
-<div class="home-stats">
+<div class="stats">
   <ul class="container">
     <li>
       <%= icon(:octicon, :package, class: "stat-icon stat-icon-package") %>
