--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -20,4 +20,5 @@
 @import "template/policies";
 @import "template/signup";
 @import "template/sponsors";
+@import "template/stats";
 @import "template/user";
