Separate widths for home & package stats

--- a/assets/css/template/_stats.scss
+++ b/assets/css/template/_stats.scss
@@ -1,3 +1,11 @@
+.home-stats ul li {
+  width: 18%;
+}
+
+.package-stats ul li {
+  width: 24%;
+}
+
 .stats {
   padding: 30px 0;
 
@@ -7,7 +15,6 @@
 
     li {
       display: inline-block;
-      width: 18%;
 
       @media (max-width: 575px) {
         .stat-icon {
